Bug 134386 - UI “Data series in rows” in chart wizard became ineffective
Summary: UI “Data series in rows” in chart wizard became ineffective
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2020-06-29 10:49 UTC by NISZ LibreOffice Team
Modified: 2020-07-08 14:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Calc with chart using data series in rows (12.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-06-29 10:49 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Calc (46.16 KB, image/png)
2020-06-29 10:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-06-29 10:49:56 UTC
Created attachment 162501 [details]
Example file from Calc with chart using data series in rows

When creating a chart with the Chart Wizard the Data Range pages “Data series in rows” radio button became ineffective.


Steps to reproduce:
    1. Open attached file, select the B4:D7 range
    2. Open the chart wizard, create a default column chart
    3. On the Data Range page select “Data series in rows”

Actual results:
Chart does not change, there are still A B C series with two data points instead of two series and three data points. 
Moving to the next page of the wizard and moving back shows the default “Data series in columns” radio button selected.
It is still possible to use the Data Ranges dialog (uno:DataRanges command) from the charts toolbar button to change to “Data series in rows”.

Expected results:
The chart already in the example document.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x86)
Build ID: 8ed11b7289533bd609fbcb2adfb7b2982ef6fe22
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

But not yet in:
Verzió: 6.4.0.3 (x86)
Build az.: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL

Bibisected using bibisect-win64-6.5 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=31fd3641b363c81ab23e10e6425a39e27a224c3d

author
Caolán McNamara <caolanm@redhat.com> Sat Nov 16 16:40:33 2019 +0000 
committer
Caolán McNamara <caolanm@redhat.com> Sat Nov 16 20:24:33 2019 +0100 

cid#1453998 Wrapper object use after free

Adding CC to: Caolán McNamara
Comment 1 NISZ LibreOffice Team 2020-06-29 10:50:17 UTC
Created attachment 162502 [details]
Screenshot of the problem in Calc
Comment 2 Commit Notification 2020-06-29 14:19:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/733023dd10d2f7e95dca2e8e7096ec216d5e9fb2

tdf#134386 set m_pTemplateProvider before creating any other pages

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-06-29 14:59:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/f7ebfc787a691dfcde823ac8380ee21a0057bb38

tdf#134386 set m_pTemplateProvider before creating any other pages

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-07-08 14:56:36 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 0695b5f5b328a1bc9cfdc8ba020dbdd674185e04
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!