tdf#134386 set m_pTemplateProvider before creating any other pages

Change-Id: Icc501b127f92cdbfbf0987af9b0b560f1efbc056
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97404
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>